--- a/src/bin/dwarfdump/CMakeLists.txt
+++ b/src/bin/dwarfdump/CMakeLists.txt
@@ -27,7 +27,9 @@ set_source_group(SOURCES "Source Files" dd_addrmap.c
     print_tag_attributes_usage.c 
     dd_sanitized.c dd_strstrnocase.c 
     dd_true_section_name.c dd_uri.c dd_getopt.c dd_makename.c 
-    dd_naming.c dd_esb.c dd_tsearchbal.c)
+    dd_naming.c dd_esb.c dd_tsearchbal.c
+    ./external/parson/parson.c
+    )
 	
 set_source_group(HEADERS "Header Files" 
   dd_addrmap.h dd_attr_form.h dd_checkutil.h dd_common.h dd_regex.h
@@ -47,7 +49,9 @@ set_source_group(HEADERS "Header Files"
   dd_sanitized.h
   dd_naming.h dd_makename.h dd_tsearchbal.h print_frames.h 
   dd_uri.h
-  ../../lib/libdwarf/libdwarf_private.h)
+  ../../lib/libdwarf/libdwarf_private.h
+  ./external/parson/parson.h
+  )
 
 set_source_group(CONFIGURATION_FILES "Configuration Files"
   ${PROJECT_SOURCE_DIR}/cmake/config.h.cmake
